# versioneer-inc.github.io

./: .gitignore  .pre-commit-config.yaml  CNAME  README.md  blog-viewer.js  blog.html  index.html  preview.py  pyproject.toml
_drafts/: s3-gateways.md
_posts/: 2024-12-27-app-aware-rot.md  2024-12-30-rot-all-levels.md  2025-01-26-data-governance-rot.md
blog/: 2024-10-02-the-reproducibility-challenge-with-cloud-workspaces-b9e53da2b302.md  2024-10-26-cloud-storage-for-earth-data-unlocking-its-true-potential-with-the-right-data-management-tools-4306244ec870.md  2024-11-12-earth-data-sharing-at-reasonable-scale-with-open-source-tools-4ccea43679e6.md  2024-12-27-app-aware-rot.md  2024-12-30-rot-all-levels.md  2025-01-26-data-governance-rot.md  2025-05-19-stop-shipping-raw-files-start-shipping-data-packages-ce5aa3fe0a5c.md  2025-07-16-standardizing-the-eo-data-supply-chain-enabling-reproducible-data-collaboration-at-scale-78c83fe81c3d.md  2025-10-01-building-data-supply-chains-with-lego-bricks-why-earth-observation-needs-composable-infrastructure-38600b920bb6.md  2025-10-31-the-cost-of-redundancy-522874a985da.md  2025-10-31-towards-a-pragmatic-storage-ecosystem-for-earth-sciences-71f9bbeda5b8.md  2026-01-28-earth-observation-has-a-processing-problem-but-not-the-one-we-think-5deefe3ae47e.md  2026-05-17-from-lego-bricks-to-composable-governance-why-agentic-data-platforms-need-a-resource-model-8871e7b1f036.md  2026-05-19-from-object-uploads-to-product-transactions-in-eo-data.md  2026-06-28-a-bucket-full-of-files-is-not-immediately-usable.md
components/: cover.js  footer.js  (+5 more)
(+5 files in other folders)
