[project]
name = "versioneer-inc-site"
version = "0.1.0"
description = "GitHub Pages static site with local Python preview tooling"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
preview = "versioneer_site.preview:main"

[dependency-groups]
dev = [
  "pre-commit>=4.2.0",
]

[build-system]
requires = ["hatchling>=1.26.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["versioneer_site"]
